# NordIQ

./: .deploy-trigger  .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.frontend  alembic.ini  docker-compose.prod.yml  docker-compose.yml  index.html  mobility.html  pyproject.toml  requirements.txt  style.css  sustainability.html
.github/workflows/: deploy.yml
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_seed_nordic_epr_rates.py  0003_add_billing_regulation.py  0004_add_pro_registry.py  0005_add_volumes.py  0006_add_contact_email_material_categories.py  0007_add_pro_submission_config.py  0008_add_pro_pricing_billing.py  0009_add_pro_report_format.py  0010_add_pro_invoices_reconciliation.py  0011_update_margin_default_15pct.py  0012_add_chat_history.py  0013_seed_pro_organisations.py  0014_update_ufh_notes.py  0015_seed_stichting_open.py  0016_add_weee_product_fields.py  0017_seed_pro_fee_schedules.py  0018_seed_ecopilas_fee_schedule.py  0019_pro_drive_folder_ids.py  0020_customer_drive_folder.py  0021_pro_portal_credentials.py  20260614120000_add_epr_structural_extensions.py
infra/: README.md  acm.tf  alb.tf  cloudwatch.tf  ecr.tf  ecs.tf  iam.tf  main.tf  outputs.tf  rds.tf  s3.tf  secrets.tf  security_groups.tf  terraform.tfvars.example  variables.tf  vpc.tf
nordiq/api/: dependencies.py  main.py
nordiq/calculators/: base.py  registry.py
nordiq/core/: config.py  database.py  security.py
nordiq/frontend/: app.py  (+1 more)
scripts/: create_admin.py  entrypoint-frontend.sh  entrypoint.sh
(+128 files in other folders)
